Setting up kernel source to Kernel 5.10.110.5

--- a/linux/rockchip/fork.conf
+++ b/linux/rockchip/fork.conf
@@ -1,5 +1,5 @@
-BSP_GIT="https://github.com/radxa/kernel.git"
-BSP_BRANCH="linux-5.10-gen-rkr3.4"
+BSP_GIT="https://github.com/sans-ltd/radxa-linux-kernel.git"
+BSP_COMMIT="1932709cf7d98d0d92952bba38d990d938fabc58"
 BSP_DEFCONFIG="rockchip_linux_defconfig"
 SUPPORTED_BOARDS=("rockchip"
 "rock-4se"
