Enable Preisp Dummy Sensor.

--- a/linux/rockchip/kconfig.conf
+++ b/linux/rockchip/kconfig.conf
@@ -16,3 +16,5 @@
 # Temporary fix for missing cpufreq problem on ROCK 5B
 CONFIG_SPI_ROCKCHIP=y
 CONFIG_ROCKCHIP_THERMAL=y
+
+CONFIG_VIDEO_PREISP_DUMMY_SENSOR=y
