Enable dummy_cam driver

--- a/linux/rockchip/kconfig.conf
+++ b/linux/rockchip/kconfig.conf
@@ -17,4 +17,5 @@
 CONFIG_SPI_ROCKCHIP=y
 CONFIG_ROCKCHIP_THERMAL=y
 
-CONFIG_VIDEO_PREISP_DUMMY_SENSOR=y
+# CONFIG_VIDEO_PREISP_DUMMY_SENSOR=y
+CONFIG_VIDEO_DUMMY_CAM=y
