Use public kernel repo URL

--- a/linux/rockchip/fork.conf
+++ b/linux/rockchip/fork.conf
@@ -1,4 +1,4 @@
-BSP_GIT="git@github.com:sans-ltd/radxa-rockchip-kernel.git"
+BSP_GIT="https://github.com/sans-ltd/radxa-rockchip-kernel.git"
 # BSP_COMMIT="1932709cf7d98d0d92952bba38d990d938fabc58"
 BSP_BRANCH="dummy_cam_driver"
 BSP_DEFCONFIG="rockchip_linux_defconfig"
