--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,6 @@
 name: Build
+env:
+  REVISION: 13
 on:
   push:
     branches: [ "rockpi-4-kernel5.10.110" ]
@@ -32,20 +34,30 @@ on:
 jobs:
   build_linux:
     runs-on: ubuntu-latest
-    container:
-      image: sansltd/radxa-kernel-build
+    # container:
+    #  image: sansltd/radxa-kernel-build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Run BSP Build
+      - name: Install dependency
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y qemu-user-static binfmt-support
+      - name: Build
+        shell: bash
+        run: |
+          mkdir .output
+          pushd .output
+          ../bsp --long-version --revision $REVISION linux rockchip
+          popd
+      - name: Prepare Artifacts
         run: | 
-          git config --global --add safe.directory /__w/radxa-bsp/radxa-bsp
-          ./bsp --native-build --revision 13 linux rockchip  
-          mkdir dist
-          mv linux-headers-*_arm64.deb dist
-          mv linux-image-*_arm64.deb dist
-          mv linux-image-rock-4se_*.deb dist
-          mv ./linux/arch/arm64/boot/dts/rockchip/overlay/mipi-csi.dtbo dist
+          mkdir dist 
+          mv .output/linux-headers-*_arm64.deb dist
+          mv .output/linux-image-*_arm64.deb dist
+          mv .output/linux-image-rock-4se_*.deb dist
+          mv .output/.src/linux/arch/arm64/boot/dts/rockchip/overlay/mipi-csi.dtbo dist
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
